Updated template content with personal information.

--- a/_news/nips_2017.md
+++ b/_news/nips_2017.md
@@ -4,4 +4,4 @@ date: 2017-12-01 11:30:00-0400
 inline: true
 ---
 
-Attending NIPS 2017 and presenting [some of our work on estimating accuracy]({{site.url}}/{{site.baseurl}}/assets/pdf/platanios_2017_logic/paper.pdf).
+Attending NIPS 2017 and presenting [our work on multi-task learning]({{site.url}}/{{site.baseurl}}/assets/pdf/fetr/LLD_2017_paper_15.pdf){:target="_blank"}.
