--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,106 +1,40 @@
----
----
-
-@inproceedings{Platanios:2017:active_learning,
-  author        = {Platanios, Emmanouil A and Kapoor, Ashish and Horvitz, Eric},
-  title         = {{Active Learning amidst Logical Knowledge}},
-  archivePrefix = "arXiv",
-  eprint        = {0902.0885},
-  primaryClass  = "cs.AI",
-  booktitle     = {arXiv},
-  abbr          = {arXiv},
-  year          = {2017},
-  pdf           = {platanios_2017_active_learning/paper.pdf},
-  abstract      = {{Structured prediction is ubiquitous in applications of machine learning such as knowledge extraction and natural language processing. Structure often can be formulated in terms of logical constraints. We consider the question of how to perform efficient active learning in the presence of logical constraints among variables inferred by different classifiers. We propose several methods and provide theoretical results that demonstrate the inappropriateness of employing uncertainty guided sampling, a commonly used active learning method. Furthermore, experiments on ten different datasets demonstrate that the methods significantly outperform alternatives in practice. The results are of practical significance in situations where labeled data is scarce.}}
+@article{zhao2017efficient,
+  title={Efficient Multi-task Feature and Relationship Learning},
+  author={Zhao, Han and <b>Stretcu, Otilia</b> and Negrinho, Renato and Smola, Alex and Gordon, Geoff},
+  journal={arXiv preprint arXiv:1702.04423},
+  year={2017},
+  pdf = {fetr/LLD_2017_paper_15.pdf},
+  arxiv = {1702.04423},
+  abbr       = {NIPS},
+  abstract   = {{We propose a multi-convex framework for multitask learning that improves pre- dictions by learning relationships both between tasks and between features. Our framework is a generalization of related methods, that either learn task relationships, or feature relationships, but not both. We start with a hierarchical Bayesian model, and use the empirical Bayes method to transform the underlying inference problem into a multi-convex problem. To tackle the multi-convex optimization problem, we propose a block coordinate-wise minimization algorithm that has a closed form solution for each block subproblem. Naively these solutions would be expensive to compute, but by using the theory of doubly stochastic matrices, we are able to reduce the covariance learning subproblem to a minimum-weight perfect matching problem on a complete bipartite graph, and solve it analytically and efficiently. To solve the weight learning subproblem, we propose three different strategies that can be used no matter whether the instances are shared by multiple tasks or not. We demonstrate the efficiency of our method on both synthetic datasets and real-world datasets. Experiments show that the proposed optimization method is orders of magnitude faster than the previous projected gradient method, and our model is able to exploit the correlation structures among multiple tasks and features.}},
+  poster = {fetr/poster_fetr_lld.pdf}
 }
 
-@inproceedings{Platanios:2017:accuracy_estimation_logic,
-  author        = {Platanios, Emmanouil A and Poon, Hoifung and Horvitz, Eric and Mitchell, Tom M},
-  title         = {{Estimating Accuracy from Unlabeled Data: A Probabilistic Logic Approach}},
-  booktitle     = {Neural Information Processing Systems},
-  abbr          = {NIPS},
-  year          = {2017},
-  arxiv         = {1705.07086},
-  pdf           = {platanios_2017_logic/paper.pdf},
-  supp          = {platanios_2017_logic/supplementary.pdf},
-  poster        = {platanios_2017_logic/poster.pdf},
-  abstract      = {{We propose an efﬁcient method to estimate the accuracy of classiﬁers using only unlabeled data. We consider a setting with multiple classiﬁcation problems where the target classes may be tied together through logical constraints. For example, a set of classes may be mutually exclusive, meaning that a data instance can belong to at most one of them. The proposed method is based on the intuition that: (i) when classiﬁers agree, they are more likely to be correct, and (ii) when the classiﬁers make a prediction that violates the constraints, at least one classiﬁer must be making an error. Experiments on four real-world data sets produce accuracy estimates within a few percent of the true accuracy, using solely unlabeled data. Our models also outperform existing state-of-the-art solutions in both estimating accuracies, and combining multiple classiﬁer outputs. The results emphasize the utility of logical constraints in estimating accuracy, thus validating our intuition.}}
+
+@inproceedings{fu2017brainzoom,
+  title={BrainZoom: High Resolution Reconstruction from Multi-modal Brain Signals},
+  author={Fu, Xiao<em class="star">*</em> and Huang, Kejun<em class="star">*</em> and <b>Stretcu, Otilia</b><em class="star">*</em> and Song, Hyun Ah<em class="star">*</em> and Papalexakis, Evangelos and Talukdar, Partha and Mitchell, Tom and Sidiropoulo, Nicholas and Faloutsos, Christos and Poczos, Barnabas},
+  booktitle={Proceedings of the 2017 SIAM International Conference on Data Mining},
+  pages={216--227},
+  year={2017},
+  organization={SIAM},
+  abbr  = {SDM},
+  pdf = {brainzoom/siam_paper.pdf},
+  abstract = {{How close can we zoom in to observe brain activity? Our understanding is limited by the resolution of imaging modalities that exhibit good spatial but poor temporal resolution, or vice-versa. In this paper, we propose BRAINZOOM, an efficient imaging algorithm that cross-leverages multi-modal brain signals. BRAINZOOM (a) constructs high resolution brain images from multi-modal signals, (b) is scalable, and (c) is flexible in that it can easily incorporate various priors on the brain activities, such as sparsity, low rank, or smoothness. We carefully formulate the problem to tackle nonlinearity in the measurements (via variable splitting) and auto-scale between different modal signals, and judiciously design an inexact alternating optimization-based algorithmic framework to handle the problem with provable convergence guarantees. Our experiments using a popular realistic brain signal simulator to generate fMRI and MEG demonstrate that high spatio-temporal resolution brain imaging is possible from these two modalities. The experiments also suggest that smoothness seems to be the best prior, among several we tried.}}
 }
 
-@inproceedings{Platanios:2016ti,
-  author        = {Platanios, Emmanouil A and Dubey, Avinava and Mitchell, Tom M},
-  title         = {{Estimating Accuracy from Unlabeled Data: A Bayesian Approach}},
-  booktitle     = {International Conference in Machine Learning},
-  abbr          = {ICML},
-  year          = {2016},
-  pages         = {1416-1425},
-  pdf           = {platanios_2016ti/platanios_2016ti.pdf},
-  supp          = {platanios_2016ti/platanios_2016ti_supp.pdf},
-  poster        = {platanios_2016ti/platanios_2016ti_poster.pdf},
-  slides        = {platanios_2016ti/platanios_2016ti_slides.pdf},
-  abstract      = {{We consider the question of how unlabeled data can be used to estimate the true accuracy of learned classifiers, and the related question of how outputs from several classifiers performing the same task can be combined based on their estimated accuracies. To answer these questions, we first present a simple graphical model that performs well in practice. We then provide two nonparametric extensions to it that improve its performance. Experiments on two real-world data sets produce accuracy estimates within a few percent of the true accuracy, using solely unlabeled data. Our models also outperform existing state-of-the-art solutions in both estimating accuracies, and combining multiple classifier outputs.}}
-}
-
-@inproceedings{Mitchell:2015wo,
-  author        = {Mitchell, Tom M and Cohen, William W and Hruschka Jr, Estevam R and Pratim Talukdar, Partha and Betteridge, Justin and Carlson, Andrew and Dalvi, Bhanava and Gardner, Matt and Kisiel, Bryan and Krishnamurthy, Jayant and Lao, Ni and Mazaitis, Kathryn and Mohamed, Thahir P and Nakashole, Ndapakula and Platanios, Emmanouil A and Ritter, Alan and Samadi, Mehdi and Settles, Burr and Wang, Richard C and Wijaya, Derry and Gupta, Abhinav and Chen, Xinlei and Saparov, Abulhair and Greaves, Malcolm and Welling, Joel},
-  title         = {{Never-Ending Learning}},
-  booktitle     = {Association for the Advancement of Artificial Intelligence},
-  abbr          = {AAAI},
-  year          = {2015},
-  pages         = {1--9},
-  pdf           = {mitchell_2015wo/mitchell_2015wo.pdf},
-  abstract      = {Whereas people learn many different types of knowledge from diverse experiences over many years, most current machine learning systems acquire just a single function or data model from just a single data set. We propose a neverending learning paradigm for machine learning, to better reflect the more ambitious and encompassing type of learning performed by humans. As a case study, we describe the Never-Ending Language Learner (NELL), which achieves some of the desired properties of a never-ending learner, and we discuss lessons learned. NELL has been learning to read the web 24 hours/day since January 2010, and so far has acquired a knowledge base with over 80 million confidenceweighted beliefs (e.g., servedWith(tea, biscuits)). NELL has also learned millions of features and parameters that enable it to read these beliefs from the web. Additionally, it has learned to reason over these beliefs to infer new beliefs, and is able to extend its ontology by synthesizing new relational predicates. NELL can be tracked online at http://rtw.ml.cmu.edu, and followed on Twitter at @CMUNELL.}
-}
-
-@thesis{Platanios:2015ui,
-  author        = {Platanios, Emmanouil A},
-  title         = {{Estimating Accuracy from Unlabeled Data}},
-  booktitle     = {Master's Thesis at Carnegie Mellon University},
-  abbr          = {CMU},
-  year          = {2015},
-  pages         = {1--28},
-  pdf           = {platanios_2015ui/platanios_2015ui.pdf}, 
-  poster        = {platanios_2015ui/platanios_2015ui_poster.pdf}, 
-  abstract      = {We consider the question of how unlabeled data can be used to estimate the true accuracy of learned classiﬁers. This is an important question for any autonomous learning system that must estimate its accuracy without supervision, and also when classiﬁers trained from one data distribution must be applied to a new distribution (e.g., document classiﬁers trained on one text corpus are to be applied to a second corpus). We ﬁrst show how to estimate error rates exactly from unlabeled data when given a collection of competing classiﬁers that make independent errors, based on the agreement rates between subsets of these classiﬁers. We further show that even when the competing classiﬁers do not make independent errors, both their accuracies and error dependencies can be estimated by making certain relaxed assumptions. We then present an alternative approach based on graphical models that also allows us to combine the outputs of the classiﬁers into a single output label. A simple graphical model is introduced that performs well in practice. Then, two nonparametric extensions to it are presented, that signiﬁcantly improve its performance. Experiments on two real-world data sets produce accuracy estimates within a few percent of the true accuracy, using solely unlabeled data. We also obtain results demonstrating our graphical model approaches beating alternative methods for combining the classiﬁers’ outputs. These results are of practical signiﬁcance in situations where labeled data is scarce and shed light on the more general question of how the consistency among multiple functions is related to their true accuracies.}
-}
-
-@inproceedings{Platanios:2014ti,
-  author        = {Platanios, Emmanouil A and Blum, Avrim and Mitchell, Tom M},
-  title         = {{Estimating Accuracy from Unlabeled Data}},
-  booktitle     = {Conference on Uncertainty in Artificial Intelligence},
-  abbr          = {UAI},
-  year          = {2014},
-  pages         = {1--10},
-  pdf           = {platanios_2014ti/platanios_2014ti.pdf},
-  poster        = {platanios_2014ti/platanios_2014ti_poster.pdf},
-  addendum      = {platanios_2014ti/platanios_2014ti_addendum.pdf},
-  abstract      = {We consider the question of how unlabeled data can be used to estimate the true accuracy of learned classifiers. This is an important question for any autonomous learning system that must estimate its accuracy without supervision, and also when classifiers trained from one data distribution must be applied to a new distribution (e.g., document classifiers trained on one text corpus are to be applied to a second corpus). We first show how to estimate error rates exactly from unlabeled data when given a collection of competing classifiers that make independent errors, based on the agreement rates between subsets of these classifiers. We further show that even when the competing classifiers do not make independent errors, both their accuracies and error dependencies can be estimated by making certain relaxed assumptions. Experiments on two data real-world data sets produce estimates within a few percent of the true accuracy, using solely unlabeled data. These results are of practical significance in situations where labeled data is scarce and shed light on the more general question of how the consistency among multiple functions is related to their true accuracies.}
-}
-
-@article{Platanios:2014gp,
-  author        = {Platanios, Emmanouil A and Chatzis, Sotirios P},
-  title         = {{Gaussian Process-Mixture Conditional Heteroscedasticity}},
-  journal       = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  abbr          = {PAMI}, 
-  year          = {2014},
-  volume        = {36},
-  number        = {5},
-  pages         = {888--900},
-  month         = may, 
-  pdf           = {platanios_2014gp/platanios_2014gp.pdf}, 
-  abstract      = {Generalized autoregressive conditional heteroscedasticity (GARCH) models have long been considered as one of the most successful families of approaches for volatility modeling in ﬁnancial return series. In this paper, we propose an alternative approach based on methodologies widely used in the ﬁeld of statistical machine learning. Speciﬁcally, we propose a novel nonparametric Bayesian mixture of Gaussian process regression models, each component of which models the noise variance process that contaminates the observed data as a separate latent Gaussian process driven by the observed data. This way, we essentially obtain a Gaussian process-mixture conditional heteroscedasticity (GPMCH) model for volatility modeling in ﬁnancial return series. We impose a nonparametric prior with power-law nature over the distribution of the model mixture components, namely the Pitman-Yor process prior, to allow for better capturing modeled data distributions with heavy tails and skewness. Finally, we provide a copula-based approach for obtaining a predictive posterior for the covariances over the asset returns modeled by means of a postulated GPMCH model. We evaluate the efﬁcacy of our approach in a number of benchmark scenarios, and compare its performance to state-of-the-art methodologies.}
-}
-
-@inproceedings{Platanios:2012uh,
-  author        = {Platanios, Emmanouil A and Chatzis, Sotirios P},
-  title         = {{Nonparametric Mixtures of Multi-Output Heteroscedastic Gaussian Processes for Volatility Modeling}},
-  booktitle     = {Neural Information Processing Systems Workshop on Modern Nonparametric Methods in Machine Learning},
-  abbr          = {NIPS}, 
-  year          = {2012},
-  organization  = {Department of Electrical and Electronic Engineering, Imperial College London, London, United Kingdom; Department of Electrical and Computer Engineering, and Informatics, Cyprus University of Technology, Cyprus},
-  address       = {Lake Tahoe, NV, United States of America},
-  month         = dec,
-  pdf           = {platanios_2012uh/platanios_2012uh.pdf}, 
-  poster        = {platanios_2012uh/platanios_2012uh_poster.pdf}, 
-  abstract      = {In this work, we present a nonparametric Bayesian method for multivariate volatility modeling. Our approach is based on postulation of a novel mixture of multioutput heteroscedastic Gaussian processes to model the covariance matrices of multiple assets. Speciﬁcally, we use the Pitman-Yor process prior as the non- parametric prior imposed over the components of our model, which are taken as multioutput heteroscedastic Gaussian processes obtained by introducing appropriate convolution kernels that combine simple heteroscedastic Gaussian processes under a multioutput scheme. We exhibit the efﬁcacy of our approach in a volatility prediction task.}
+@inproceedings{stretcu2015multiple,
+  title={Multiple Frames Matching for Object Discovery in Video},
+  author={<b>Stretcu, Otilia</b> and Leordeanu, Marius},
+  booktitle={BMVC},
+  volume={1},
+  number={2},
+  pages={3},
+  year={2015},
+  abbr  = {BMVC},
+  pdf = {videoPCA/bmvc_videopca.pdf},
+  website          = {https://sites.google.com/site/multipleframesmatching/},
+  abstract      = {{Automatic discovery of foreground objects in video sequences is an important prob- lem in computer vision with applications to object tracking, video segmentation and clas- sification. We propose an efficient method for the discovery of object bounding boxes and the corresponding soft-segmentation masks across multiple video frames. We offer a graph matching formulation for bounding box selection and refinement using second and higher order terms. Our objective function takes into consideration local, frame-based information, as well as spatiotemporal and appearance consistency over multiple frames. First, we find an initial pool of candidate boxes using a novel and fast foreground esti- mation method in video, based on Principal Component Analysis. Then, we match the boxes across multiple frames using pairwise geometric and appearance terms. Finally, we refine their location and soft-segmentation using higher order potentials that estab- lish appearance regularity over multiple frames. We test our method on the large scale YouTube-Objects dataset and obtain state-of-the-art results on several object classes.}},
+  presentation = {http://www.bmva.org/bmvc/2015/papers/paper186/index.html},
+  code = {https://drive.google.com/drive/folders/0B7CshFGxfi_5aW13T2h5RDZ3djQ}
 }
