Updated CV and publications.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @article{zhao2017efficient,
   title={Efficient Multi-task Feature and Relationship Learning},
   author={Zhao, Han and <b>Stretcu, Otilia</b> and Negrinho, Renato and Smola, Alex and Gordon, Geoff},
-  journal={arXiv preprint arXiv:1702.04423},
+  journal={In Neural Information Processing Systems Workshop on Learning With Limited Data},
   year={2017},
   pdf = {fetr/LLD_2017_paper_15.pdf},
   arxiv = {1702.04423},
