Changed publication links.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,8 +26,10 @@
 }
 
 @article{Chrabaszcz2019SubthalamicNA,
-    title = {Subthalamic nucleus and sensorimotor cortex activity during speech production.},
-    author = {Anna Chrabaszcz and W. J. Neumann and <b>Otilia Stretcu</b> and Witold J. Lipski and Adam Bush and Christina Dastolfo-Hromack and Dongbin Wang and Donald J. Crammond and Susan Shaiman and Michael Walsh Dickey and Lori L. Holt and Robert S. Turner and Julie A. Fiez and R. Mark Richardson},
+    title = {Subthalamic nucleus and sensorimotor cortex activity during speech production},
+    author = {Chrabaszcz, Anna and Neumann,  W. J. and <b>Stretcu, Otilia</b> and Lipski, Witold J. and Bush, Adam and
+    Dastolfo-Hromack, Christina and Wang, Dongbin and Crammond, Donald J. and Shaiman, Susan and Walsh Dickey, Michael
+    and Holt, Lori L. and Turner, Robert S. and Fiez, Julie A. and Richardson, R. Mark},
     journal = {The Journal of neuroscience : the official journal of the Society for Neuroscience},
     year = {2019},
     abbr = {JNeurosci},
