Added EMIM details.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -123,3 +123,38 @@
     presentation = {http://www.bmva.org/bmvc/2015/papers/paper186/index.html},
     code = {https://drive.google.com/drive/folders/0B7CshFGxfi_5aW13T2h5RDZ3djQ}
 }
+
+@article{emim,
+    title = {A multi-method driven evaluation of molecular imaging techniques},
+    author = {<b>Stretcu, Otilia</b> and Shavit, Yoli and Lio, Pietro},
+    journal = {Poster presentation at the 10th annual meeting of the European Society for Molecular Imaging (ESMI)},
+    year = {2015},
+    abbr = {EMIM},
+    organization = {European Society for Molecular Imaging (ESMI)},
+    abstract = {{In the past decade, we have witnessed significant advancements in image analysis methods.
+        However, the analysis of molecular images such as fluorescent in situ hybridization (FISH) still
+        relies heavily on manual evaluation by experts. For automated image analysis to be adopted by
+        clinicians there is a need for more reliable tools that can extract rich information from molecular
+        images. The first step in developing such tools is to evaluate the performance of state-of-the-art
+        image analysis methods. This assessment could be further used to develop of a multi-method
+        approach that would integrate partial information extracted by each constituent method, to build an
+        augmented microscopic reality.
+        We investigate a set of techniques which have shown promising results in the analysis of images
+        that share many similarities with molecular images. Namely, wavelets, that have successfully been
+        used to describe structural patterns in astronomical images [1], and Markov Random Fields. We
+        apply them to a benchmark of molecular FISH images and evaluate their performance with respect
+        to two key tasks: (1) denoising and thresholding; (2) segmentation and detection of various
+        structures(e.g. interphase nuclei, metaphase chromosomes, multi-colored probes). We further test
+        whether data from high-throughput Chromosome Conformation Capture (Hi-C) could enrich the
+        information obtained.
+        We show the results of our analysis and identify which techniques are best for describing certain
+        properties of images (e.g. intensity, edges). We further discuss methodologies of integrating
+        complementary methods and data to improve the overall performance.
+        The integration of multiple methods can result in overall improvement with respected to key tasks
+        in the analysis of molecular images. Coupling a multi-method approach with Chromosome
+        Conformation Capture data can help to extract additional information from images.
+        <br/><br/>
+        [1] Mertens, F., and Lobanov A. (2014) Wavelet-based decomposition and analysis of structural
+        patterns in astronomical images. arXiv preprintarXiv:1410.3732}},
+    poster = {emim/emim_poster.pdf}
+}
